deployment/k8s/environments/dev/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapp-ui-ingress
  namespace: skyops-apps-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-dev
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - skyops.fortstak.com
      secretName: skyops-tls
  rules:
    - host: skyops.fortstak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weatherapp-ui
                port:
                  number: 3000
